src/css/style.css
/* ... */
.darkmode-toggle__label {
  cursor: pointer;
  width: 2.5em;
  height: 1.25em;
  background: var(--clr-gray);
  display: inline-block;
  border-radius: 1em;
  position: relative;
}

.darkmode-toggle__label::after {
  content: '';
  position: absolute;
  top: 0.1em;
  left: 0.1em;
  width: 1em;
  height: 1em;
  background: var(--clr-light);
  background-image: url('/img/svg/lightbulb-dark.svg');
  border-radius: 0.8em;
  transition: 0.3s;
}

.darkmode-toggle__checkbox:checked + .darkmode-toggle__label {
  background: var(--clr-accent);
}

.darkmode-toggle__checkbox:checked + .darkmode-toggle__label::after {
  left: calc(100% - 0.1em);
  background-image: url('/img/svg/lightbulb-light.svg');
  transform: translateX(-100%);
}

nav {
  display: none;
  position: fixed;
  background-color: var(--clr-dark);
  color: var(--clr-light);
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 100;
}

.nav__list {
  list-style: none;
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
  padding: 0;
}

.nav__link {
  color: var(--fc-light);
  font-weight: var(--fw-bold);
  font-size: var(--fs-h2);
  text-decoration: none;
}

.nav__link:hover {
  color: var(--clr-accent);
}

.nav-toggle {
  padding: 0.75em;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 1em;
  right: 1em;
  z-index: 1000;
}

.nav-open header {
  backdrop-filter: unset;
  -webkit-backdrop-filter: unset;
}

.nav-open nav {
  display: block;
}

.nav-open .nav-toggle {
  position: fixed;
}

.nav-open .nav-toggle:focus {
  outline: none;
}

.hamburger {
  display: block;
  position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  background-color: var(--clr-accent);
  width: 2em;
  height: 3px;
  border-radius: 1em;
  transition: transform 250ms ease-in-out;
}

.hamburger::before,
.hamburger::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
}

.hamburger::before { top: 6px; }
.hamburger::after { bottom: 6px; }

.nav-open .hamburger {
  transform: rotate(0.625turn);
}

.nav-open .hamburger::before {
  transform: rotate(90deg) translateX(-6px);
}

.nav-open .hamburger::after {
  opacity: 0;
}

@media (min-width: 900px) {
  .nav-toggle {
    display: none;
  }

  .darkmode-toggle {
    margin-right: 0;
  }

  .nav {
    display: inline-block;
    background-color: transparent;
    color: var(--clr-accent);
  }

  .nav__list {
    flex-direction: row;
    justify-content: flex-end;
    margin-right: 5em;
    z-index: -1;
  }

  .nav__link {
    color: var(--clr-accent);
    font-size: var(--fs-body);
  }

  .nav__list > * + * {
    margin-right: 1em;
  }
}

/* Intro section */

.intro {
  position: relative;
  padding-top: 7em;
}

.intro__img {
  box-shadow: var(--bs);
}

.section__subtitle--intro {
  display: inline-block;
}

/* RECOMMENDED SETS TO CONSIDER: 300, 600, 900, 1200 */
@media (min-width: 600px) {
  .intro {
    display: grid;
    width: min-content;
    margin: 0 auto;
    grid-column-gap: 1em;
    grid-template-areas:
      "img title"
      "img subtitle";
    grid-template-columns: min-content max-content;
  }

  .intro__img {
    animation: 750ms ease-in 250ms 1 slideInFromTop;
    grid-area: img;
    min-width: 250px;
    position: relative;
    z-index: 2;
  }

  .section__title--intro {
    animation: 750ms ease-in 250ms 1 slideInFromRight;
  }

  .section__subtitle--intro {
    animation: 750ms ease-in 250ms 1 slideInFromLeft;
    align-self: start;
    grid-column: -1 / 1;
    grid-row: 2;
    text-align: right;
    position: relative;
    left: -1.5em;
    width: calc(100% + 1.5em);
    font-size: var(--fs-body);
  }
}

/* My services section */

.my-services {
  background-color: var(--clr-dark);
  background-size: cover;
  background-blend-mode: color-dodge;
  color: var(--fc-light);
  text-align: center;
}

.section__title--services {
  color: var(--fc-accent);
  position: relative;
}

.section__title--services::after {
  content: '';
  display: block;
  width: 2em;
  height: 1px;
  margin: 0.5em auto 1em;
  background-color: var(--fc-light);
  opacity: 0.25;
}

.services {
  margin-bottom: 4em;
}

.service {
  max-width: 500px;
  margin: 0 auto;
}

.service p {
  height: 100%;
  text-align: left;
  background-color: var(--clr-mod);
  padding: 16px;
  border-color: var(--fc-light);
  border-width: 1px;
  border-style: solid;
  outline-style: solid;
  outline-width: 1px;
  outline-color: var(--fc-light);
  transition: outline-offset 150ms ease;
}

.service p:hover,
.service p:focus {
  outline-offset: -0.3em;
}

@media (min-width: 800px) {
  .services {
    display: flex;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
  }

  .service + .service {
    margin-left: 2em;
  }

  .service p {
    min-height: 350px;
  }
}

/* About me section */

.about-me {
  max-width: 1000px;
  margin: 0 auto;
}

.about-me__img {
  box-shadow: var(--bs);
}

@media (min-width: 600px) {
  .about-me {
    display: grid;
    grid-template-columns: 1fr 200px;
    grid-template-areas:
      "title img"
      "subtitle img"
      "text img";
    grid-column-gap: 2em;
  }

  .section__title--about {
    grid-area: title;
  }

  .section__subtitle--about {
    grid-column: 1 / -1;
    grid-row: 2;
    position: relative;
    left: -1em;
    width: calc(100% + 2em);
    padding-left: 1em;
    padding-right: calc(200px + 4em);
  }

  .about-me__img {
    grid-area: img;
    position: relative;
    z-index: 2;
  }
}

/* My work section */

.my-work {
  background-color: var(--clr-dark);
  color: var(--fc-light);
  text-align: center;
}

.portfolio {
  position: relative;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.portfolio__item {
  position: relative;
  background-color: var(--clr-accent);
  overflow: hidden;
  cursor: pointer;
  display: inline-block;
}
/* ... */

